[CrOS Tether] Remove erroneous DCHECK().

The DCHECK() asserted that the status was ERROR_DETECTED whenever
GetReasonToClose() was called. However, this function is also intended
to be called when connections are closed normally.

Bug: 829083
Change-Id: Iaee6948cf38ef3ee3ddfbde8681ec9a840928662
Reviewed-on: https://chromium-review.googlesource.com/996310
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548241}
Former-commit-id: ad260293e6811dded924eae6934aa4c245a53141