components/cryptauth/ble/bluetooth_low_energy_weave_packet_receiver.cc
@@ -51,7 +51,6 @@ ReasonForClose BluetoothLowEnergyWeavePacketReceiver::GetReasonForClose() {
 }
 
 ReasonForClose BluetoothLowEnergyWeavePacketReceiver::GetReasonToClose() {
-  DCHECK(state_ == State::ERROR_DETECTED);
   return reason_to_close_;
 }
 
